[gd_scene load_steps=3 format=3 uid="uid://c8v7n4p2m1x5k"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_enemy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_enemy"]
radius = 20.0

[node name="Enemy" type="Area2D"]
script = ExtResource("1_enemy")

[node name="Sprite" type="Node2D" parent="."]

[node name="BlobBody" type="ColorRect" parent="Sprite"]
offset_left = -20.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 25.0
color = Color(0.4, 0.8, 0.3, 1)

[node name="BlobTop" type="ColorRect" parent="Sprite"]
offset_left = -15.0
offset_top = -20.0
offset_right = 15.0
offset_bottom = 0.0
color = Color(0.35, 0.75, 0.25, 1)

[node name="Eye1" type="ColorRect" parent="Sprite"]
offset_left = -12.0
offset_top = -8.0
offset_right = -6.0
offset_bottom = -2.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="Eye2" type="ColorRect" parent="Sprite"]
offset_left = 6.0
offset_top = -8.0
offset_right = 12.0
offset_bottom = -2.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_enemy")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(20, 20)
rect = Rect2(-20, -20, 40, 40)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
